tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@expr_too_complex.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/expr_too_complex.txt
---
error: The expression is too complex
 --> expr_too_complex.txt:1:103
  |
1 | {{ (((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((
  |                                                                                                       ^
